--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -7,7 +7,7 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Product ID.</th>
+                    <th scope="col">Product ID</th>
                     <th scope="col">Product Name</th>
                     <th scope="col">Quantity</th>
                 </tr>
